99% width for scrollbar fix

--- a/public/assets/css/gameboard.css
+++ b/public/assets/css/gameboard.css
@@ -2,6 +2,7 @@ html,
 body{
     background-color: lightblue;
     height: 100%;
+    width: 99%;
 }
 
 footer{
